--- a/src/styles/block.css
+++ b/src/styles/block.css
@@ -1,4 +1,5 @@
 .ce-block {
+  position: relative;
   &:first-of-type {
     margin-top: 0;
   }
@@ -63,6 +64,23 @@
     }
   }
 
+  &__indicators {
+    max-width: 34px;
+    margin: 0 auto;
+    position: relative;
+    position: absolute;
+    width: 100%;
+    left: calc((100% - var(--content-width)) / 2 - 34px * 2);
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    pointer-events: none;
+  }
+  &--focused  &__indicators {
+      opacity: 1;
+      pointer-events: all;
+  }
+
   a {
     cursor: pointer;
     text-decoration: underline;
@@ -75,11 +93,30 @@
   i {
     font-style: italic;
   }
+  .ce-indicator {
+    &__button {
+      padding: 5px;
+      text-align: center;
+      color: #707684;
+      cursor: pointer;
+      &:hover {
+        color: #1d202b;
+      }
+    }
+  }
 }
 
 .codex-editor--narrow .ce-block--focused {
   @media (--not-mobile) {
     margin-right: calc(var(--narrow-mode-right-padding) * -1);
     padding-right: var(--narrow-mode-right-padding);
+  }
+}
+.codex-editor--rtl {
+  .ce-block {
+    &__indicators {
+      left: 100%;
+      right: calc((100% - 650px)/2 - 68px);
+    }
   }
 }
